# parking-stgallen-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  parking-stgallen.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  parking-stgallen.rockspec  parking-stgallen_sdk.lua  parking-stgallen_types.lua
php/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  composer.json  config.php  features.php  parkingstgallen_sdk.php
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  parkingstgallen_sdk.py  parkingstgallen_types.py  pyproject.toml
py/core/: context.py  control.py  operation.py  response.py  result.py  spec.py  utility_type.py
py/entity/: parking_record_entity.py
py/feature/: cache_feature.py  clienttrack_feature.py  idempotency_feature.py  paging_feature.py  proxy_feature.py  ratelimit_feature.py  retry_feature.py  telemetry_feature.py  test_feature.py  timeout_feature.py
py/test/: runner.py  test_exists.py  test_netsim.py  test_parking_record_direct.py  test_parking_record_entity.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: feature_add.py  fetcher.py  make_error.py  make_point.py  make_request.py  make_result.py  make_spec.py  make_url.py  prepare_auth.py  prepare_method.py  prepare_path.py  transform_response.py
rb/: AGENTS.md  CLAUDE.md  ParkingStgallen_sdk.gemspec  ParkingStgallen_sdk.rb  (+5 more)
(+403 files in other folders)
